NYSD9-79: Events Alignment Fix

--- a/web/themes/custom/nysenate_theme/src/patterns/components/event/event.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/event/event.scss
@@ -1,21 +1,6 @@
 // Import site utilities.
 @import '../../global/utils/init';
 
-.c-block {
-  
-  p {
-		font-family: $font-serif;
-    line-height: 1.5em;
-    color: $grey03;
-    font-size: 16px;
-	}
-}
-
-.c-block--social{
-	margin-top: 20px;
-	margin-bottom: 40px;
-}
-
 .nys-event-title {
   margin-bottom: 20px;
   color: $grey08;
@@ -536,14 +521,14 @@
     .c-event-name {
       float: right;
       width: 460px;
-      margin: 12px 120px 10px 0px;
+      margin: 12px 6px 10px 0px;
     }
 
     .c-event-location {
       float: right;
       width: 460px;
       clear: right;
-      margin-right: 120px;
+      margin-right: 6px;
       margin-left: 0;
       .icon-before__circle-pin:before {
         vertical-align: top;
@@ -554,7 +539,7 @@
       float: right;
       width: 460px;
       clear: right;
-      margin-right: 120px;
+      margin-right: 6px;
       display: block;
     }
 
@@ -562,7 +547,7 @@
       float: right;
       width: 460px;
       clear: right;
-      margin-right: 120px;
+      margin-right: 6px;
       display: block;
     }
 
@@ -624,22 +609,22 @@
 
     .c-event-name {
       margin-top: 0;
-      margin-right: 120px;
+      margin-right: 6px;
     }
 
     .c-event-location {
       clear: right;
-      margin-right: 120px;
+      margin-right: 6px;
     }
 
     .c-event-address {
       clear: right;
-      margin-right: 120px;
+      margin-right: 6px;
     }
 
     .c-event-time {
       clear: right;
-      margin-right: 120px;
+      margin-right: 6px;
     }
 
     .c-event-rsvp {
